Accessibility Page: Fix contrast ratio on page URLs
Fixed: 1314150
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4035469
Commit-Queue: Cole Horvitz <colehorvitz@chromium.org>
Cr-Commit-Position: refs/heads/main@{#1073143}

--- a/chrome/browser/resources/accessibility/accessibility.css
+++ b/chrome/browser/resources/accessibility/accessibility.css
@@ -24,7 +24,7 @@ img {
 }
 
 .url {
-  color: rgb(128, 134, 139);
+  color: rgb(95, 99, 104);
 }
 
 p {
